--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Stech Shop</title>
   </head>
   <body>
-    <div class="container" id="root"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
